final package update with environment
final package update with environment

--- a/SBIePay/src/main/resources/application.properties
+++ b/SBIePay/src/main/resources/application.properties
@@ -2,5 +2,10 @@ spring.application.name=SBIePay
 server.servlet.context-path=/SBIePay
 server.port=1090
 
+
+
 mkValue=kykB5W/srURRCRFYYumycgtkEAlbaPnSlQIbE6VqHw8=
 kkValue=tll8Fl6NYHECm2OyrO+Ik76zEPn10/7mdmeTUFW3klE=
+merchantId=1000003
+successUrl=https://uat.sbiepay.sbi/secure/sucess3.jsp
+failUrl=https://uat.sbiepay.sbi/secure/fail3.jsp
