--- a/SBIePay/pom.xml
+++ b/SBIePay/pom.xml
@@ -12,9 +12,10 @@
 	<artifactId>SbiEpayMerchantApplication</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>SbiEpayMerchantApplication</name>
+	
 	<description>Demo project for Spring Boot</description>
 	<properties>
-		<java.version>8</java.version>
+		<java.version>1.8</java.version>
 	</properties>
 	
 	<!--<repositories>
@@ -42,12 +43,18 @@
 	    <version>1.1.2</version>
 	</dependency> -->
 	
-<dependency>
+ <dependency>
   <groupId>com.epay.encdata</groupId>
   <artifactId>encdata</artifactId>
-  <version>1.1.2</version>
+  <version>1.1.5</version>
 </dependency>
 
+
+
+     <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
 	
 	<dependency>
 			<groupId>nz.net.ultraq.thymeleaf</groupId>
